--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+:root{
+  --dark-blue:#022B3A;
+  --blue:#1F7A8C;
+  --light-blue:#BFDBF7;
+  --grey:#E1E5F2;
+  --white:#FFFFFF;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
